# godot-love-wechat

./: .gitignore  README.md  build-windows.spec  godot-love-wechat.spec  main.py  projects.json  pyproject.toml  settings.json
app/: exporter.py  gdscripts.py  layout.py  menu.py  project.py  project_list.py  settings.py  stroge.py  utils.py
backend/: index.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ProjectCard/: index.tsx
frontend/src/components/SettingDIalog/: index.tsx
gdscripts/: export_perset.gd  set_preset.gd
templates/: template.json
