[project]
name = "godot-love-wechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.8",
    "nicegui>=2.9.0",
    "nuitka>=2.5.9",
    "pillow>=11.0.0",
    "pyinstaller>=6.11.1",
    "pywebview>=5.3.2",
]
